--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 beautifulsoup4==4.6.0
 Django==2.0
+django-ckeditor==5.4.0
 django-filter==1.1.0
+django-js-asset==1.0.0
 djangorestframework==3.7.7
 lxml==4.1.1
 mysqlclient==1.3.12
